# deep-agent

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  deep_agent_pipeline.py  docker-compose.yml  langgraph.json  pyproject.toml
docs/: openwebui-ui-specs.md
notebooks/: injected_tool_args_guide.ipynb
openwebui/: deep_agent_pipe.py
src/agent/ai/: assistant.py  prompts.py  state.py  utils.py
src/agent/ai/prompts/: README.md  file_usage_instructions.md  ls_description.md  read_file_description.md  researcher_instructions.md  subagent_usage_instructions.md  summarize_web_search.md  task_description_prefix.md  todo_usage_instructions.md  write_file_description.md  write_todos_description.md
src/agent/ai/tools/: __init__.py  file_tools.py  research_tools.py  task_tool.py  todo_tools.py
src/agent/services/api/: dependencies.py  main.py
src/agent/services/api/routes/: chat.py  utils.py
src/agent/services/api/schemas/: chat.py
