[project]
name = "deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.5",
    "ipykernel>=7.2.0",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-openai>=1.1.7",
    "langfuse>=3.13.0",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.4.12",
    "markdownify>=1.2.2",
    "rich>=14.3.2",
    "sse-starlette>=2.1.3",
    "tavily>=1.1.0",
    "uvicorn>=0.40.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
